# Nebel

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/shader/: image.frag  image.vert  model.frag  model.vert  rect.vert  sprite.frag  sprite.vert
engine/app/: CMakeLists.txt
engine/app/include/: Scripts.h
engine/app/src/: nebel.cpp
engine/desktop_app/: CMakeLists.txt
engine/desktop_app/include/: Scripts.h
engine/desktop_app/src/: main.cpp  nebel.cpp
engine/engine/: CMakeLists.txt
engine/engine/general/include/: SkeletalAnimation.h  Vertex.h  audio.h  camera.h  components.h  controller.h  ecs.h  game.h  graphics.h  importer.h  input.h  interfaces.h  loader.h  math_helper.h  mesh.h  model.h  nebel.h  physics2d.h  renderer.h  resources.h  rng.h  scheduler.h  script.h  scripting_system.h  shader.h  sprite.h  texture.h  transform.h  ui.h
engine/engine/general/src/: audio.cpp  camera.cpp  controller.cpp  ecs.cpp  game.cpp  graphics.cpp  importer.cpp  input.cpp  loader.cpp  mesh.cpp  nebel.cpp  physics2d.cpp  renderer.cpp  renderer2d.cpp  renderer3d.cpp  rng.cpp  scheduler.cpp  scripting_system.cpp  shader.cpp  sprite.cpp  texture.cpp  ui.cpp
engine/engine/linux/include/: platform.h
engine/engine/linux/src/: platform.cpp
libs/SDL-SDL2/Release/: SDL2.exp  SDL2_test.lib  SDL2main.lib
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
